--- a/PageTheScroll/Base.lproj/Main.storyboard
+++ b/PageTheScroll/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PageTheScroll" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,56 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sky" translatesAutoresizingMaskIntoConstraints="NO" id="vQG-pN-OGh">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sun" translatesAutoresizingMaskIntoConstraints="NO" id="LZb-v9-GFM">
+                                <rect key="frame" x="239" y="35" width="120" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="4xC-iV-qiB"/>
+                                    <constraint firstAttribute="height" constant="128" id="f43-xq-o5q"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mountains" translatesAutoresizingMaskIntoConstraints="NO" id="bV1-11-0HW">
+                                <rect key="frame" x="0.0" y="455" width="375" height="212"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="212" id="jN6-og-Nbj"/>
+                                </constraints>
+                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xXA-bH-q8H">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="LZb-v9-GFM" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="15" id="5NS-Na-guf"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="bV1-11-0HW" secondAttribute="bottom" id="Ax4-XA-Cyz"/>
+                            <constraint firstItem="xXA-bH-q8H" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="It4-dE-WBG"/>
+                            <constraint firstAttribute="trailing" secondItem="bV1-11-0HW" secondAttribute="trailing" id="JUl-fn-qBd"/>
+                            <constraint firstItem="vQG-pN-OGh" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="MBe-gq-OWE"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xXA-bH-q8H" secondAttribute="bottom" id="Ult-ie-4G9"/>
+                            <constraint firstItem="vQG-pN-OGh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="VeG-WZ-kKw"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="vQG-pN-OGh" secondAttribute="bottom" id="mQS-nE-gQp"/>
+                            <constraint firstItem="xXA-bH-q8H" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="qfo-U7-VyW"/>
+                            <constraint firstAttribute="trailing" secondItem="vQG-pN-OGh" secondAttribute="trailing" id="rdM-q4-boT"/>
+                            <constraint firstItem="LZb-v9-GFM" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="sED-yp-0Mg"/>
+                            <constraint firstItem="bV1-11-0HW" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="u2Z-VO-UAx"/>
+                            <constraint firstAttribute="trailing" secondItem="xXA-bH-q8H" secondAttribute="trailing" id="ybh-AU-aNK"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="scrollView" destination="xXA-bH-q8H" id="Vjh-cw-281"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="137.18140929535232"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Mountains" width="375" height="100"/>
+        <image name="Sky" width="375" height="667"/>
+        <image name="Sun" width="53" height="53"/>
+    </resources>
 </document>
